--- a/challenge02/index.html
+++ b/challenge02/index.html
@@ -9,14 +9,23 @@
 </head>
 <body>
 
-<section>
-    <div class="container container-top">
-        <div class="intro-content">
-            <h1>Lorem ipsum dolor sit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur distinctio laudantium dolores. Nulla quibusdam reprehenderit eum sit minus aliquid!</p>
-        </div>
+<!--<section>-->
+<!--    <div class="container container-top">-->
+<!--        <div class="intro-content">-->
+<!--            <h1>Lorem ipsum dolor sit.</h1>-->
+<!--            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur distinctio laudantium dolores. Nulla quibusdam reprehenderit eum sit minus aliquid!</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+<div class="intro">
+  <div class="container">
+    <div class="intro-content">
+      <h1>Lorem ipsum dolor sit.</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur distinctio laudantium dolores. Nulla quibusdam reprehenderit eum sit minus aliquid!</p>
     </div>
-</section>
+  </div>
+</div>
 
 <div class="container">
     <h2>more content D:</h2>
