--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -9,8 +9,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Responsive layouts don’t have to be a struggle</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-<a href="#">I want to learn</a>
+<div class="intro">
+  <div class="container">
+    <div class="intro-content">
+      <h1>Responsive layouts don’t have to be a struggle</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      <a href="#">I want to learn</a>
+    </div>
+  </div>
+</div>
 </body>
 </html>
