--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="intro">
+<!--<div class="intro">-->
+<div class="hero">
   <div class="container">
-    <div class="intro-content">
+<!--    <div class="intro-content">-->
+    <div class="hero__text">
       <h1>Responsive layouts don’t have to be a struggle</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
       <a href="#">I want to learn</a>
