--- a/02-3-challenge/index.html
+++ b/02-3-challenge/index.html
@@ -18,38 +18,45 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>Cheap</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam.</p>
-    </div>
-    <div class="col">
-      <h2>Quick</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam.</p>
-    </div>
-    <div class="col">
-      <h2>Affordable</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam.</p>
+
+<div class="info info--odd">
+  <div class="container">
+    <div class="row">
+      <div class="col gap--small">
+        <h2>Cheap</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col gap--small">
+        <h2>Quick</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col gap--small">
+        <h2>Affordable</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
     </div>
   </div>
 </div>
 
-
-<div class="col">
-  <h2>Cheap</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam.</p>
+<div class="info info--even">
+  <div class="container">
+    <div class="row">
+      <div class="col gap--large">
+        <h2>Cheap</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col gap--large">
+        <h2>Quick</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam.</p>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="col">
-  <h2>Quick</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam.</p>
-</div>
-
 
 </body>
 </html>
