--- a/02-3-challenge/index.html
+++ b/02-3-challenge/index.html
@@ -19,44 +19,53 @@
   </div>
 </div>
 
-<div class="info info--odd">
+<section class="three-col">
+<!--<div class="info info&#45;&#45;odd">-->
   <div class="container">
     <div class="row">
-      <div class="col gap--small">
+<!--      <div class="col gap&#45;&#45;small">-->
+      <div class="col">
         <h2>Cheap</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </div>
-      <div class="col gap--small">
+<!--      <div class="col gap&#45;&#45;small">-->
+      <div class="col">
         <h2>Quick</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </div>
-      <div class="col gap--small">
+<!--      <div class="col gap&#45;&#45;small">-->
+      <div class="col">
         <h2>Affordable</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </div>
     </div>
   </div>
-</div>
+<!--</div>-->
+</section>
 
-<div class="info info--even">
+<section class="two-col">
+<!--<div class="info info&#45;&#45;even">-->
   <div class="container">
     <div class="row">
-      <div class="col gap--large">
+<!--      <div class="col gap&#45;&#45;large">-->
+      <div class="col">
         <h2>Cheap</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Ut enim ad minim veniam.</p>
       </div>
-      <div class="col gap--large">
+<!--      <div class="col gap&#45;&#45;large">-->
+      <div class="col">
         <h2>Quick</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Ut enim ad minim veniam.</p>
       </div>
     </div>
   </div>
-</div>
+<!--</div>-->
+</section>
 
 </body>
 </html>
