--- a/02-3-challenge/index.html
+++ b/02-3-challenge/index.html
@@ -19,52 +19,87 @@
   </div>
 </div>
 
+<!--<section class="three-col">-->
+<!--&lt;!&ndash;<div class="info info&#45;&#45;odd">&ndash;&gt;-->
+<!--  <div class="container row">-->
+<!--&lt;!&ndash;    <div class="row">&ndash;&gt;-->
+<!--&lt;!&ndash;      <div class="col gap&#45;&#45;small">&ndash;&gt;-->
+<!--    <div class="col">-->
+<!--      <h2>Cheap</h2>-->
+<!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+<!--        magna aliqua. Ut enim ad minim veniam.</p>-->
+<!--    </div>-->
+<!--&lt;!&ndash;      <div class="col gap&#45;&#45;small">&ndash;&gt;-->
+<!--    <div class="col">-->
+<!--      <h2>Quick</h2>-->
+<!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+<!--        magna aliqua. Ut enim ad minim veniam.</p>-->
+<!--    </div>-->
+<!--&lt;!&ndash;      <div class="col gap&#45;&#45;small">&ndash;&gt;-->
+<!--    <div class="col">-->
+<!--      <h2>Affordable</h2>-->
+<!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+<!--        magna aliqua. Ut enim ad minim veniam.</p>-->
+<!--    </div>-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--  </div>-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</section>-->
+
+<!--<section class="two-col">-->
+<!--&lt;!&ndash;<div class="info info&#45;&#45;even">&ndash;&gt;-->
+<!--  <div class="container row">-->
+<!--&lt;!&ndash;    <div class="row">&ndash;&gt;-->
+<!--&lt;!&ndash;      <div class="col gap&#45;&#45;large">&ndash;&gt;-->
+<!--    <div class="col">-->
+<!--      <h2>Cheap</h2>-->
+<!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--        aliqua. Ut enim ad minim veniam.</p>-->
+<!--    </div>-->
+<!--&lt;!&ndash;      <div class="col gap&#45;&#45;large">&ndash;&gt;-->
+<!--    <div class="col">-->
+<!--      <h2>Quick</h2>-->
+<!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--        aliqua. Ut enim ad minim veniam.</p>-->
+<!--    </div>-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--  </div>-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</section>-->
+
 <section class="three-col">
-<!--<div class="info info&#45;&#45;odd">-->
   <div class="container row">
-<!--    <div class="row">-->
-<!--      <div class="col gap&#45;&#45;small">-->
     <div class="col">
       <h2>Cheap</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam.</p>
     </div>
-<!--      <div class="col gap&#45;&#45;small">-->
     <div class="col">
       <h2>Quick</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam.</p>
     </div>
-<!--      <div class="col gap&#45;&#45;small">-->
     <div class="col">
       <h2>Affordable</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam.</p>
     </div>
-<!--    </div>-->
   </div>
-<!--</div>-->
 </section>
 
 <section class="two-col">
-<!--<div class="info info&#45;&#45;even">-->
   <div class="container row">
-<!--    <div class="row">-->
-<!--      <div class="col gap&#45;&#45;large">-->
     <div class="col">
       <h2>Cheap</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Ut enim ad minim veniam.</p>
     </div>
-<!--      <div class="col gap&#45;&#45;large">-->
     <div class="col">
       <h2>Quick</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Ut enim ad minim veniam.</p>
     </div>
-<!--    </div>-->
   </div>
-<!--</div>-->
 </section>
 
 </body>
