Add image and align image

--- a/02-6-challenge2/index.html
+++ b/02-6-challenge2/index.html
@@ -16,6 +16,7 @@
         magna aliqua. Ut enim ad minim veniam.</p>
       <a href="#" class="btn">I want to learn</a>
     </div>
+    <img class="hero__img" src="img/hero-img.jpg" alt="website layout">
   </div>
 </div>
 
