Main content section. My solution

--- a/02-6-challenge2/index.html
+++ b/02-6-challenge2/index.html
@@ -20,6 +20,32 @@
   </div>
 </div>
 
+<div class="main">
+  <div class="container row">
+    <section class="main__text">
+      <h2>Quality designs made custom, on demand, just for you</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto maxime minima minus possimus repellat tempore. Dolores explicabo, totam. Nulla, quis, repellendus! Aut culpa laudantium magnam minima nisi nostrum officiis pariatur veritatis. Delectus dolore fugiat id nemo tenetur vitae voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto maxime minima minus possimus repellat tempore. Dolores explicabo, totam. Nulla, quis, repellendus! Aut culpa laudantium magnam minima nisi nostrum officiis pariatur veritatis. Delectus dolore fugiat id nemo tenetur vitae voluptatem.</p>
+    </section>
+    <section class="main__bulletin">
+      <div class="main__bulletin-item">
+        <h2>Cheap</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="main__bulletin-item">
+        <h2>Quick</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="main__bulletin-item">
+        <h2>Affordable</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+    </section>
+  </div>
+</div>
 
 </body>
 </html>
