Flexbox challenge #2 - Solution - Create the html boilerplate. Good idea to use <main> element. Good idea to flatten the structure by having all classes (main container row) in the main.

--- a/02-6-challenge2/index.html
+++ b/02-6-challenge2/index.html
@@ -47,5 +47,24 @@
   </div>
 </div>
 
+<main class="main container row">
+  <section class="primary-content">
+    <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto maxime minima minus possimus repellat tempore. Dolores explicabo, totam. Nulla, quis, repellendus! Aut culpa laudantium magnam minima nisi nostrum officiis pariatur veritatis. Delectus dolore fugiat id nemo tenetur vitae voluptatem.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto maxime minima minus possimus repellat tempore. Dolores explicabo, totam. Nulla, quis, repellendus! Aut culpa laudantium magnam minima nisi nostrum officiis pariatur veritatis. Delectus dolore fugiat id nemo tenetur vitae voluptatem.</p>
+  </section>
+  <aside class="sidebar">
+    <h2 class="sidebar-title">Cheap</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
+    <h2 class="sidebar-title">Quick</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
+    <h2 class="sidebar-title">Affordable</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
+  </aside>
+</main>
+
 </body>
 </html>
