--- a/nav-challenge/index.html
+++ b/nav-challenge/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
   <div class="container row">
-    <a href="#"><img src="img/logo.svg" alt="conquering responsive layouts"></a>
+    <a href="#" class="logo"><img src="img/logo.svg" alt="conquering responsive layouts"></a>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
