Create and style the main section

--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -16,5 +16,19 @@
       <h1>Responsive layouts don't have to be a struggle</h1>
     </div>
   </section>
+
+  <main class="main">
+    <div class="container">
+      <h2>Quality Designs</h2>
+      <div class="row">
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, blanditiis dicta illum labore maiores nam nemo saepe sint suscipit voluptatibus. Perspiciatis provident qui similique tempore.</p>
+        </div>
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cumque cupiditate officia placeat veritatis. Commodi dicta ipsam nobis repellendus vero.</p>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
