Create and style the articles section.

--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -19,7 +19,7 @@
 
   <main class="main">
     <div class="container">
-      <h2>Quality Designs</h2>
+      <h2 class="main-title">Quality Designs</h2>
       <div class="row">
         <div class="col">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, blanditiis dicta illum labore maiores nam nemo saepe sint suscipit voluptatibus. Perspiciatis provident qui similique tempore.</p>
@@ -30,5 +30,29 @@
       </div>
     </div>
   </main>
+
+  <article class="article--primary">
+    <div class="container row">
+      <div class="col">
+        <h2 class="article-title">Made custom for you</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur deserunt harum labore libero minima!</p>
+      </div>
+      <div class="col">
+        <img src="image-01.jpg" alt="sunrise">
+      </div>
+    </div>
+  </article>
+
+  <article class="article--secondary">
+    <div class="container row">
+      <div class="col">
+        <img src="image-02.jpg" alt="sunrise">
+      </div>
+      <div class="col">
+        <h2 class="article-title">Created with care</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores consectetur exercitationem incidunt itaque, maiores nesciunt! Cum minima rerum sint!</p>
+      </div>
+    </div>
+  </article>
 </body>
 </html>
