!!! Make the image in the column responsive. Will decrease the size (keep proportion) when the window size decrease. Will only reach its current width as the maximum (will not stretch) when the window size increases.

--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -38,7 +38,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur deserunt harum labore libero minima!</p>
       </div>
       <div class="col">
-        <img src="image-01.jpg" alt="sunrise">
+        <img class="article__image" src="image-01.jpg" alt="sunrise">
       </div>
     </div>
   </article>
@@ -46,7 +46,7 @@
   <article class="article--secondary">
     <div class="container row">
       <div class="col">
-        <img src="image-02.jpg" alt="sunrise">
+        <img class="article__image" src="image-02.jpg" alt="sunrise">
       </div>
       <div class="col">
         <h2 class="article-title">Created with care</h2>
