--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -10,16 +10,63 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="hero">
-    <div class="hero-text">
-      <div class="subtitle">lorem ipsum sit</div>
-      <h1>Responsive layouts don't have to be a struggle</h1>
+<!--  <section class="hero">-->
+<!--    <div class="hero-text">-->
+<!--      <div class="subtitle">lorem ipsum sit</div>-->
+<!--      <h1>Responsive layouts don't have to be a struggle</h1>-->
+<!--    </div>-->
+<!--  </section>-->
+
+<!--  <main class="main">-->
+<!--    <div class="container">-->
+<!--      <h2 class="main-title">Quality Designs</h2>-->
+<!--      <div class="row">-->
+<!--        <div class="col">-->
+<!--          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, blanditiis dicta illum labore maiores nam nemo saepe sint suscipit voluptatibus. Perspiciatis provident qui similique tempore.</p>-->
+<!--        </div>-->
+<!--        <div class="col">-->
+<!--          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cumque cupiditate officia placeat veritatis. Commodi dicta ipsam nobis repellendus vero.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </main>-->
+
+<!--  <article class="article&#45;&#45;primary">-->
+<!--    <div class="container row">-->
+<!--      <div class="col">-->
+<!--        <h2 class="article-title">Made custom for you</h2>-->
+<!--        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur deserunt harum labore libero minima!</p>-->
+<!--      </div>-->
+<!--      <div class="col">-->
+<!--        <img class="article__image" src="image-01.jpg" alt="sunrise">-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </article>-->
+
+<!--  <article class="article&#45;&#45;secondary">-->
+<!--    <div class="container row">-->
+<!--      <div class="col">-->
+<!--        <img class="article__image" src="image-02.jpg" alt="sunrise">-->
+<!--      </div>-->
+<!--      <div class="col">-->
+<!--        <h2 class="article-title">Created with care</h2>-->
+<!--        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores consectetur exercitationem incidunt itaque, maiores nesciunt! Cum minima rerum sint!</p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </article>-->
+
+
+  <section class="intro">
+    <div class="container">
+      <p class="intro__text">lorem ipsum sit</p>
+      <!-- The doddge solution Kevin has is to manually break the line in the intro_title. I thought it has to be natural roll -->
+      <h1 class="intro__title">Responsive layouts don't have to be a struggle</h1>
     </div>
   </section>
 
-  <main class="main">
+  <section class="section-two">
     <div class="container">
-      <h2 class="main-title">Quality Designs</h2>
+      <h2 class="section-title section-title--dark">Quality Designs</h2>
       <div class="row">
         <div class="col">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, blanditiis dicta illum labore maiores nam nemo saepe sint suscipit voluptatibus. Perspiciatis provident qui similique tempore.</p>
@@ -29,30 +76,31 @@
         </div>
       </div>
     </div>
-  </main>
+  </section>
 
-  <article class="article--primary">
+  <section class="section-three">
     <div class="container row">
       <div class="col">
-        <h2 class="article-title">Made custom for you</h2>
+        <h2 class="section-title">Made custom for you</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur deserunt harum labore libero minima!</p>
       </div>
       <div class="col">
-        <img class="article__image" src="image-01.jpg" alt="sunrise">
+        <img class="article__image" src="image-01.jpg" alt="a sunset over a mountain range">
       </div>
     </div>
-  </article>
+  </section>
 
-  <article class="article--secondary">
+  <section class="section-four">
     <div class="container row">
       <div class="col">
-        <img class="article__image" src="image-02.jpg" alt="sunrise">
+        <img class="article__image" src="image-02.jpg" alt="a sunset over a mountain range with tree branches">
       </div>
       <div class="col">
-        <h2 class="article-title">Created with care</h2>
+        <h2 class="section-title">Created with care</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores consectetur exercitationem incidunt itaque, maiores nesciunt! Cum minima rerum sint!</p>
       </div>
     </div>
-  </article>
+  </section>
+
 </body>
 </html>
