There is not class for images

--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -85,7 +85,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur deserunt harum labore libero minima!</p>
       </div>
       <div class="col">
-        <img class="article__image" src="image-01.jpg" alt="a sunset over a mountain range">
+        <img src="image-01.jpg" alt="a sunset over a mountain range">
       </div>
     </div>
   </section>
@@ -93,7 +93,7 @@
   <section class="section-four">
     <div class="container row">
       <div class="col">
-        <img class="article__image" src="image-02.jpg" alt="a sunset over a mountain range with tree branches">
+        <img src="image-02.jpg" alt="a sunset over a mountain range with tree branches">
       </div>
       <div class="col">
         <h2 class="section-title">Created with care</h2>
