--- a/flexbox-challenge-4/index.html
+++ b/flexbox-challenge-4/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <p class="intro__text">lorem ipsum sit</p>
       <!-- The doddge solution Kevin has is to manually break the line in the intro_title. I thought it has to be natural roll -->
-      <h1 class="intro__title">Responsive layouts don't have to be a struggle</h1>
+      <h1 class="intro__title">Responsive layouts don't<br>have to be a struggle</h1>
     </div>
   </section>
 
