Filled up content for index.html

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -9,6 +9,112 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+  <div class="container row">
+    <a href="#">
+      <img src="img/logo.svg" alt="CRL logo">
+    </a>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Sign in</li>
+      <li>Sign up</li>
+    </ul>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="container row">
+    <h1>Responsive layouts <span>don't have to be a struggle</span></h1>
+    <div class="hero__text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, dolorem esse iusto molestias nulla odit suscipit unde! Alias, maiores, reiciendis.</p>
+      <a href="#">I want to learn</a>
+    </div>
+  </div>
+</section>
+
+<main>
+  <section class="section-one">
+    <div class="container row">
+      <div class="col">
+        <h3>Mobile-first</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+      </div>
+      <div class="col">
+        <h3>Efficient</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+      </div>
+      <div class="col">
+        <h3>Done right</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-two">
+    <div class="container row">
+      <div class="primary-content">
+        <h3>It doesn't have to be so hard</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
+        <img src="img/the-image.jpg" alt="layout image">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
+      </div>
+      <aside class="sidebar">
+        <div class="sidebar__item">
+          <h3>Break it down</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        </div>
+        <div class="sidebar__item">
+          <h3>Break it down</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        </div>
+        <div class="sidebar__item">
+          <h3>Break it down</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        </div>
+      </aside>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="container">
+    <h2>Just scratching the surface</h2>
+    <div class="row">
+      <div class="col">
+        <h3>About our company</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa doloribus esse eveniet ex, expedita impedit iure, maxime nihil nostrum optio quia quo recusandae suscipit, tempora.</p>
+      </div>
+      <div class="col">
+        <h3>Getting around</h3>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Other things</h3>
+        <ul>
+          <li>Lorem ipsum</li>
+          <li>dolor</li>
+          <li>sit amet</li>
+          <li>consectetur</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>And more</h3>
+        <ul>
+          <li>Lorem ipsum</li>
+          <li>dolor</li>
+          <li>sit amet</li>
+          <li>consectetur</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
