Missed out all the <a> link to add

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -15,11 +15,11 @@
       <img src="img/logo.svg" alt="CRL logo">
     </a>
     <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-      <li>Sign in</li>
-      <li>Sign up</li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Sign in</a></li>
+      <li><a href="#">Sign up</a></li>
     </ul>
   </div>
 </header>
@@ -89,27 +89,27 @@
       <div class="col">
         <h3>Getting around</h3>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <div class="col">
         <h3>Other things</h3>
         <ul>
-          <li>Lorem ipsum</li>
-          <li>dolor</li>
-          <li>sit amet</li>
-          <li>consectetur</li>
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">dolor</a></li>
+          <li><a href="#">sit amet</a></li>
+          <li><a href="#">consectetur</a></li>
         </ul>
       </div>
       <div class="col">
         <h3>And more</h3>
         <ul>
-          <li>Lorem ipsum</li>
-          <li>dolor</li>
-          <li>sit amet</li>
-          <li>consectetur</li>
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">dolor</a></li>
+          <li><a href="#">sit amet</a></li>
+          <li><a href="#"></consectetur</a></li>
         </ul>
       </div>
     </div>
