--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -10,17 +10,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="nav">
   <div class="container row">
     <a href="#">
-      <img src="img/logo.svg" alt="CRL logo">
+      <img src="img/logo.svg" alt="CRL Home Logo">
     </a>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Sign in</a></li>
-      <li><a href="#">Sign up</a></li>
+    <ul class="nav__list">
+      <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">Sign in</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">Sign up</a></li>
     </ul>
   </div>
 </header>
