Adjust header section text; change last .nav__link style; add hover and focus state

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -20,7 +20,7 @@
       <li class="nav__item"><a href="#" class="nav__link">About</a></li>
       <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
       <li class="nav__item"><a href="#" class="nav__link">Sign in</a></li>
-      <li class="nav__item"><a href="#" class="nav__link">Sign up</a></li>
+      <li class="nav__item"><a href="#" class="nav__link nav__link--btn">Sign up</a></li>
     </ul>
   </div>
 </header>
