--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -27,10 +27,10 @@
 
 <section class="hero">
   <div class="container row">
-    <h1>Responsive layouts <span>don't have to be a struggle</span></h1>
+    <h1 class="hero__title">Responsive layouts <span class="accent">don't have to be a struggle</span></h1>
     <div class="hero__text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, dolorem esse iusto molestias nulla odit suscipit unde! Alias, maiores, reiciendis.</p>
-      <a href="#">I want to learn</a>
+      <a href="#" class="hero__btn" >I want to learn</a>
     </div>
   </div>
 </section>
