--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -39,16 +39,16 @@
   <section class="section-one">
     <div class="container row">
       <div class="col">
-        <h3>Mobile-first</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+        <h3 class="section-one__title">Mobile-first</h3>
+        <p class="section-one__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
       </div>
       <div class="col">
-        <h3>Efficient</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+        <h3 class="section-one__title">Efficient</h3>
+        <p class="section-one__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
       </div>
       <div class="col">
-        <h3>Done right</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
+        <h3 class="section-one__title">Done right</h3>
+        <p class="section-one__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquid assumenda dolore earum eveniet exercitationem iste maiores numquam officia placeat quisquam, quod sit soluta.</p>
       </div>
     </div>
   </section>
