--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -56,23 +56,23 @@
   <section class="section-two">
     <div class="container row">
       <div class="primary-content">
-        <h3>It doesn't have to be so hard</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
+        <h3 class="primary-content__title">It doesn't have to be so hard</h3>
+        <p class="primary-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
         <img src="img/the-image.jpg" alt="layout image">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
+        <p class="primary-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
       </div>
       <aside class="sidebar">
-        <div class="sidebar__item">
-          <h3>Break it down</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        <div class="sidebar-item">
+          <h3 class="sidebar-item__title">Break it down</h3>
+          <p class="sidebar-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
         </div>
-        <div class="sidebar__item">
-          <h3>Break it down</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        <div class="sidebar-item">
+          <h3 class="sidebar-item__title">Break it down</h3>
+          <p class="sidebar-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
         </div>
-        <div class="sidebar__item">
-          <h3>Break it down</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
+        <div class="sidebar-item">
+          <h3 class="sidebar-item__title">Break it down</h3>
+          <p class="sidebar-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
         </div>
       </aside>
     </div>
