Add style for -- footer

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -79,38 +79,38 @@
   </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
-    <h2>Just scratching the surface</h2>
+    <h2 class="footer__title">Just scratching the surface</h2>
     <div class="row">
       <div class="col">
-        <h3>About our company</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa doloribus esse eveniet ex, expedita impedit iure, maxime nihil nostrum optio quia quo recusandae suscipit, tempora.</p>
+        <h3 class="footer__subtitle">About our company</h3>
+        <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa doloribus esse eveniet ex, expedita impedit iure, maxime nihil nostrum optio quia quo recusandae suscipit, tempora.</p>
       </div>
       <div class="col">
-        <h3>Getting around</h3>
+        <h3 class="footer__subtitle">Getting around</h3>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">About</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
         </ul>
       </div>
       <div class="col">
-        <h3>Other things</h3>
+        <h3 class="footer__subtitle">Other things</h3>
         <ul>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">dolor</a></li>
-          <li><a href="#">sit amet</a></li>
-          <li><a href="#">consectetur</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Lorem ipsum</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">dolor</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">sit amet</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">consectetur</a></li>
         </ul>
       </div>
       <div class="col">
-        <h3>And more</h3>
+        <h3 class="footer__subtitle">And more</h3>
         <ul>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">dolor</a></li>
-          <li><a href="#">sit amet</a></li>
-          <li><a href="#"></consectetur</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Lorem ipsum</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">dolor</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">sit amet</a></li>
+          <li class="footer__item"><a href="#" class="footer__link"></consectetur</a></li>
         </ul>
       </div>
     </div>
