--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -110,7 +110,7 @@
           <li class="footer__item"><a href="#" class="footer__link">Lorem ipsum</a></li>
           <li class="footer__item"><a href="#" class="footer__link">dolor</a></li>
           <li class="footer__item"><a href="#" class="footer__link">sit amet</a></li>
-          <li class="footer__item"><a href="#" class="footer__link"></consectetur</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">consectetur</a></li>
         </ul>
       </div>
     </div>
