Change the size of footer__title (it looks much bigger in the image). Add style for footer for medium size and keep it the same as large screen.

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -83,7 +83,7 @@
   <div class="container">
     <h2 class="footer__title">Just scratching the surface</h2>
     <div class="row">
-      <div class="col">
+      <div class="col footer__first-col">
         <h3 class="footer__subtitle">About our company</h3>
         <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa doloribus esse eveniet ex, expedita impedit iure, maxime nihil nostrum optio quia quo recusandae suscipit, tempora.</p>
       </div>
