Set sidebar to flex rather than row. As row is also used in .section-one and I don't want to override it base on section 2

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -61,7 +61,7 @@
         <img src="img/the-image.jpg" alt="layout image">
         <p class="primary-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
       </div>
-      <aside class="sidebar row">
+      <aside class="sidebar">
         <div class="sidebar-item">
           <h3 class="sidebar-item__title">Break it down</h3>
           <p class="sidebar-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cumque harum, ipsa minus natus nobis rem temporibus vero voluptatum.</p>
