Style -- main -- section two. And use .sidebar-item + .sidebar-item for spacing for all 3 screen sizes.

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -54,7 +54,7 @@
   </section>
 
   <section class="section-two">
-    <div class="container">
+    <div class="container section-two__row">
       <div class="primary-content">
         <h3 class="primary-content__title">It doesn't have to be so hard</h3>
         <p class="primary-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda debitis deleniti dolorem dolores doloribus, esse exercitationem expedita explicabo facere illum laborum laudantium molestias nihil numquam obcaecati optio pariatur placeat quae rem sequi sit tempora tempore voluptatem voluptates. Ab asperiores dolorem id laboriosam modi molestiae nostrum provident! Fugit incidunt, neque.</p>
