--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -12,7 +12,7 @@
 <body>
 <header class="nav">
   <div class="container row">
-    <a href="#">
+    <a href="#" class="logo">
       <img src="img/logo.svg" alt="CRL Home Logo">
     </a>
     <ul class="nav__list">
