Create Hamburger menu

--- a/nav-challenge-2/index.html
+++ b/nav-challenge-2/index.html
@@ -12,6 +12,9 @@
 <body>
 <header class="nav">
   <div class="container row">
+    <button class="nav-toggle" aria-label="open navigation">
+      <div class="hamburger"></div>
+    </button>
     <a href="#" class="logo">
       <img src="img/logo.svg" alt="CRL Home Logo">
     </a>
